Fixed Alignment Issues

--- a/PortfolioDev/portfolio.css
+++ b/PortfolioDev/portfolio.css
@@ -16,8 +16,9 @@ body {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
+    overflow: hidden;
     z-index: 1;
 }
 
